--- a/public/Components/Comments/comment.css
+++ b/public/Components/Comments/comment.css
@@ -12,6 +12,7 @@
   border-radius: 20px;
   padding: 16px 22px;
   background-color: #120C18;
+  margin: 16px;
 }
 #comment_user {
   font-style: normal;
@@ -24,19 +25,27 @@
   padding-top: 24px;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
 }
 #comment_img {
-  width: 15%;
-  height: 15%;
-  border-radius: 100%;
+  width: 150%;
+  height: auto;
+}
+#comment_img_container {
+  width: 10%;
+  height: width;
+  border-radius: 50%;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #comment_text {
   width: 100%;
-  padding: 9px 23px;
+  padding: 24px;
   margin-left: 15px;
   background: white;
-  border-radius: 48px;
+  border-radius: 8px;
 }
 #comment_comment {
   font-style: normal;
@@ -70,9 +79,31 @@
 
 @media only screen and (max-width: 768px) {
   #comment_user {
-    font-size: 16px;
+    font-size: 20px;
   }
   #comment_comment {
-    font-size: 12px;
+    font-size: 14px;
+  }
+  #comment_body {
+    padding-top: 10px;
+  }
+  #comment_text {
+    width: 100%;
+    padding: 8px;
+    margin-left: 15px;
+    background: white;
+    border-radius: 8px;
+  }
+  #comment_img {
+    width: 150%;
+    height: auto;
+  }
+  #comment_img_container {
+    width: 30%;
+    height: width;
+    border-radius: 50%;
+    overflow: hidden;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }/*# sourceMappingURL=comment.css.map */
