--- a/public/Components/Comments/comment.scss
+++ b/public/Components/Comments/comment.scss
@@ -13,6 +13,7 @@
     border-radius: 20px;
     padding: 16px 22px;
     background-color: #120C18;
+    margin: 16px ;
 
     &_user {
         font-style: normal;
@@ -26,21 +27,29 @@
         padding-top: 24px;
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
     }
 
     &_img {
-        width: 15%;
-        height: 15%;
-        border-radius: 100%;
+        width: 150%;
+        height: auto;
+
+        &_container {
+            width: 10%;
+            height: width;
+            border-radius: 50%;
+            overflow: hidden;
+            object-fit: cover;
+        }
     }
 
     &_text {
         width: 100%;
-        padding: 9px 23px;
+        padding: 24px;
         margin-left: 15px;
         background: white;
-        border-radius: 48px;
+        border-radius: 8px;
     }
 
     &_comment {
@@ -50,7 +59,7 @@
         line-height: 15px;
         color: #979C9E;
     }
-    
+
     &_reactions {
         display: flex;
         flex-direction: row;
@@ -58,18 +67,18 @@
         padding-top: 20px;
         color: white;
     }
-    
+
     &_likes {
         display: flex;
         flex-direction: row;
         color: white;
     }
-    
+
     &_number {
         margin-left: 8px;
     }
-    
-    &_noComment{
+
+    &_noComment {
         font-style: normal;
         font-weight: 500;
         font-size: 18px;
@@ -80,13 +89,38 @@
 }
 
 @media only screen and (max-width: 768px) {
-    #comment {    
+    #comment {
         &_user {
-            font-size: 16px;
+            font-size: 20px;
         }
-        
+
         &_comment {
-            font-size: 12px;
+            font-size: 14px;
+        }
+
+        &_body {
+            padding-top: 10px;
+        }
+
+        &_text {
+            width: 100%;
+            padding: 8px;
+            margin-left: 15px;
+            background: white;
+            border-radius: 8px;
+        }
+
+        &_img {
+            width: 150%;
+            height: auto;
+    
+            &_container {
+                width: 30%;
+                height: width;
+                border-radius: 50%;
+                overflow: hidden;
+                object-fit: cover;
+            }
         }
     }
 
